--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -55,7 +55,10 @@
     <Compile Include="Abstract\ICategoryDal.cs" />
     <Compile Include="Abstract\IContactDal.cs" />
     <Compile Include="Abstract\IContentDal.cs" />
+    <Compile Include="Abstract\IDraftDal.cs" />
     <Compile Include="Abstract\IHeadingDal.cs" />
+    <Compile Include="Abstract\IImageFileDal.cs" />
+    <Compile Include="Abstract\IMessageDal.cs" />
     <Compile Include="Abstract\IRepository.cs" />
     <Compile Include="Abstract\IWriterDal.cs" />
     <Compile Include="Concrete\Context.cs" />
@@ -64,7 +67,10 @@
     <Compile Include="EntityFramework\EfCategoryDal.cs" />
     <Compile Include="EntityFramework\EfContactDal.cs" />
     <Compile Include="EntityFramework\EfContentDal.cs" />
+    <Compile Include="EntityFramework\EfDraftDal.cs" />
     <Compile Include="EntityFramework\EfHeadingDal.cs" />
+    <Compile Include="EntityFramework\EfImageFileDal.cs" />
+    <Compile Include="EntityFramework\EfMessageDal.cs" />
     <Compile Include="EntityFramework\EfWriterDal.cs" />
     <Compile Include="Migrations\202105090102182_mig1.cs" />
     <Compile Include="Migrations\202105090102182_mig1.designer.cs">
@@ -93,6 +99,22 @@
     <Compile Include="Migrations\202105291259057_mig_headingstatusadd.cs" />
     <Compile Include="Migrations\202105291259057_mig_headingstatusadd.designer.cs">
       <DependentUpon>202105291259057_mig_headingstatusadd.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106021154090_mig_add_message.cs" />
+    <Compile Include="Migrations\202106021154090_mig_add_message.designer.cs">
+      <DependentUpon>202106021154090_mig_add_message.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106060040032_contact_adddate.cs" />
+    <Compile Include="Migrations\202106060040032_contact_adddate.designer.cs">
+      <DependentUpon>202106060040032_contact_adddate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106070111529_mig_addimagefile.cs" />
+    <Compile Include="Migrations\202106070111529_mig_addimagefile.designer.cs">
+      <DependentUpon>202106070111529_mig_addimagefile.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106071601284_mig_add_draft.cs" />
+    <Compile Include="Migrations\202106071601284_mig_add_draft.designer.cs">
+      <DependentUpon>202106071601284_mig_add_draft.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -128,6 +150,18 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202105291259057_mig_headingstatusadd.resx">
       <DependentUpon>202105291259057_mig_headingstatusadd.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106021154090_mig_add_message.resx">
+      <DependentUpon>202106021154090_mig_add_message.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106060040032_contact_adddate.resx">
+      <DependentUpon>202106060040032_contact_adddate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106070111529_mig_addimagefile.resx">
+      <DependentUpon>202106070111529_mig_addimagefile.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106071601284_mig_add_draft.resx">
+      <DependentUpon>202106071601284_mig_add_draft.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
