--- a/EntityLayer/EntityLayer.csproj
+++ b/EntityLayer/EntityLayer.csproj
@@ -55,7 +55,10 @@
     <Compile Include="Concrete\Category.cs" />
     <Compile Include="Concrete\Contact.cs" />
     <Compile Include="Concrete\Content.cs" />
+    <Compile Include="Concrete\Draft.cs" />
     <Compile Include="Concrete\Heading.cs" />
+    <Compile Include="Concrete\ImageFile.cs" />
+    <Compile Include="Concrete\Message.cs" />
     <Compile Include="Concrete\Writer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
