--- a/MvcProje/MvcProje.csproj
+++ b/MvcProje/MvcProje.csproj
@@ -136,8 +136,11 @@
     <Compile Include="Controllers\AdminCategoryController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\ContentController.cs" />
+    <Compile Include="Controllers\ErrorPageController.cs" />
+    <Compile Include="Controllers\GalleryController.cs" />
     <Compile Include="Controllers\HeadingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MessageController.cs" />
     <Compile Include="Controllers\StatisticsController.cs" />
     <Compile Include="Controllers\WriterController.cs" />
     <Compile Include="Global.asax.cs">
@@ -146,6 +149,36 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\css\style.css" />
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\img\bg.jpg" />
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\index.html" />
+    <Content Include="AdminLTE-3.0.4\colorlib-error-404-10\readme.txt" />
+    <Content Include="AdminLTE-3.0.4\images\1.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\10.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\11.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\12.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\13.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\14.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\15.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\16.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\17.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\18.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\19.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\2.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\20.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\21.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\22.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\23.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\24.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\25.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\26.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\3.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\4.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\5.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\6.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\7.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\8.jpg" />
+    <Content Include="AdminLTE-3.0.4\images\9.jpg" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
@@ -2293,6 +2326,13 @@
     <Content Include="Views\Contact\Index.cshtml" />
     <Content Include="Views\Contact\GetContactDetails.cshtml" />
     <Content Include="Views\Contact\PartialContact.cshtml" />
+    <Content Include="Views\Message\Inbox.cshtml" />
+    <Content Include="Views\Message\Sendbox.cshtml" />
+    <Content Include="Views\Message\NewMessage.cshtml" />
+    <Content Include="Views\Message\GetInBoxMessageDetails.cshtml" />
+    <Content Include="Views\Message\GetSendBoxMessageDetails.cshtml" />
+    <Content Include="Views\ErrorPage\Page404.cshtml" />
+    <Content Include="Views\Gallery\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
